Added device context and its initialization

--- a/meson.build
+++ b/meson.build
@@ -28,6 +28,7 @@ src = [
     'src/Events/EventQueue.cpp',
 
     # Rendering
+    'src/Rendering/DeviceContext.cpp',
     'src/Rendering/Surface.cpp',
 ]
 
