Introduced present context with swapchain creation

--- a/meson.build
+++ b/meson.build
@@ -29,6 +29,7 @@ src = [
 
     # Rendering
     'src/Rendering/DeviceContext.cpp',
+    'src/Rendering/PresentContext.cpp',
     'src/Rendering/Surface.cpp',
 ]
 
