Added callback for surface resize

--- a/meson.build
+++ b/meson.build
@@ -25,6 +25,7 @@ src = [
     'src/Backends/VulkanBackend.cpp',
 
     # Events
+    'src/Events/Event.cpp',
     'src/Events/EventQueue.cpp',
 
     # Rendering
