Reworked resource management classes: removed smart pointers usage wherever it is not required, added Lazy<> for lazy dependency evaluation, resource definition and initialization functions was split

--- a/meson.build
+++ b/meson.build
@@ -18,7 +18,6 @@ src = [
 
     # Core
     'src/Core/Engine.cpp',
-    'src/Core/ResourceSet.cpp',
 
     # Backends
     'src/Backends/GlfwBackend.cpp',
@@ -33,6 +32,9 @@ src = [
     'src/Rendering/PresentContext.cpp',
     'src/Rendering/RenderThread.cpp',
     'src/Rendering/Surface.cpp',
+
+    # Resources
+    'src/Resources/ResourceSet.cpp',
 ]
 
 executable('penrose', src, dependencies: deps)
