--- a/meson.build
+++ b/meson.build
@@ -51,6 +51,7 @@ src = [
     'src/Rendering/RenderGraph.cpp',
     'src/Rendering/RenderGraphExecutor.cpp',
     'src/Rendering/RenderGraphParser.cpp',
+    'src/Rendering/RenderListProvider.cpp',
     'src/Rendering/RenderThread.cpp',
     'src/Rendering/Surface.cpp',
     'src/Rendering/Utils.cpp',
