Changed target from executable to library

--- a/meson.build
+++ b/meson.build
@@ -8,6 +8,8 @@ project(
     ])
 
 cmake = import('cmake')
+cmake_opts = cmake.subproject_options()
+cmake_opts.add_cmake_defines({'CMAKE_POSITION_INDEPENDENT_CODE': true})
 
 deps = [
     subproject('fmt').get_variable('fmt_dep'),
@@ -15,14 +17,12 @@ deps = [
     dependency('vulkan'),
     subproject('imgui', default_options: ['default_library=static']).get_variable('imgui_dep'),
     subproject('glm').get_variable('glm_dep'),
-    cmake.subproject('tinyobjloader').dependency('tinyobjloader'),
+    cmake.subproject('tinyobjloader', options: cmake_opts).dependency('tinyobjloader'),
 ]
 
 incdir = include_directories('include')
 
 src = [
-    # 'src/Main.cpp', TODO: remove
-
     # Assets
     'src/Assets/AssetDictionary.cpp',
     'src/Assets/AssetInstance.cpp',
@@ -75,15 +75,5 @@ cpp_args = [
     '-DGLM_FORCE_DEPTH_ZERO_TO_ONE'
 ]
 
-executable('penrose', src, dependencies: deps, cpp_args: cpp_args, include_directories: incdir)
-
-# shaders compilation
-shaders = [
-    'data/shaders/default-forward-rendering.vert',
-    'data/shaders/default-forward-rendering.frag',
-]
-
-foreach shader : shaders
-    message('processing shader ' + shader)
-    run_command('glslangValidator', '-gVS', '-V', shader, '-o', shader + '.spv', check: true)
-endforeach
+penrose = library('penrose', src, dependencies: deps, cpp_args: cpp_args, include_directories: incdir)
+penrose_dep = declare_dependency(include_directories: incdir, link_with: penrose)
