Added test with sample scene

--- a/tests/meson.build
+++ b/tests/meson.build
@@ -1,6 +1,5 @@
 tests_deps = [
     penrose_dep,
-    dependency('fmt'),
     dependency('catch2-with-main')
 ]
 
@@ -8,9 +7,13 @@ tests_src = [
     'TestsMain.cpp',
 
     # TESTS
+    'ComplexTests.cpp',
     'EngineTests.cpp',
 ]
 
-tests_exe = executable('penrose-tests', tests_src, dependencies: tests_deps, include_directories: incdir)
-
-test('All Tests', tests_exe)
+tests_exe = executable(
+    'penrose-tests',
+    tests_src,
+    dependencies: tests_deps,
+    include_directories: incdir
+)
