Introduced pipeline info for building pipelines

--- a/meson.build
+++ b/meson.build
@@ -47,6 +47,7 @@ src = [
 
     # Rendering
     'src/Rendering/DeviceContext.cpp',
+    'src/Rendering/PipelineInfo.cpp',
     'src/Rendering/PresentContext.cpp',
     'src/Rendering/RenderContext.cpp',
     'src/Rendering/RenderGraph.cpp',
