Introduced RenderTarget, RenderTargetFactory, simplified VkRenderTargets

--- a/meson.build
+++ b/meson.build
@@ -85,6 +85,7 @@ src = [
     'src/Builtin/Rendering/VkImageFactory.cpp',
     'src/Builtin/Rendering/VkRenderPass.cpp',
     'src/Builtin/Rendering/VkRenderTarget.cpp',
+    'src/Builtin/Rendering/VkRenderTargetFactory.cpp',
     'src/Builtin/Rendering/VkShader.cpp',
     'src/Builtin/Rendering/VkShaderFactory.cpp',
     'src/Builtin/Rendering/VkUtils.cpp',
