Added hash calculation for pipeline infos

--- a/tests/meson.build
+++ b/tests/meson.build
@@ -9,6 +9,7 @@ tests_src = [
     # TESTS
     'ComplexTests.cpp',
     'EngineTests.cpp',
+    'PipelineInfoTests.cpp'
 ]
 
 tests_exe = executable(
