Added input hooks for disabling input handling for several cases (i.e. ImGui input)

--- a/meson.build
+++ b/meson.build
@@ -41,6 +41,7 @@ src = [
     'src/Events/EventQueue.cpp',
 
     # Input
+    'src/Input/Input.cpp',
     'src/Input/InputHandler.cpp',
 
     # Rendering
