Fixed rotation calculation, added test for checking camera projection

--- a/tests/meson.build
+++ b/tests/meson.build
@@ -15,6 +15,7 @@ tests_src = [
 
     # Integration Tests
     'src/IntegrationTests/ComplexScenes/OrbitalCamera.cpp',
+    'src/IntegrationTests/ComplexScenes/Projection.cpp',
     'src/IntegrationTests/ComplexScenes/RotatingCamera.cpp',
     'src/IntegrationTests/DebugUI/DebugUI.cpp',
     'src/IntegrationTests/Engine/EngineStartStop.cpp',
