Removed usages of constants from <cmath>, introduced math constants and numeric functions

--- a/tests/meson.build
+++ b/tests/meson.build
@@ -11,6 +11,7 @@ tests_src = [
     'src/ECS/TestSurfaceResizeSystem.cpp',
 
     # Unit Tests
+    'src/UnitTests/Math/NumericFuncs.cpp',
     'src/UnitTests/Rendering/PipelineInfo.cpp',
 
     # Integration Tests
